--- a/Announcement.html
+++ b/Announcement.html
@@ -23,15 +23,15 @@
             <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
             </div>
-                <li><a href="Announcement.html">General</a></li>
-                <li><a href="AnnouncementSundayService.html">Sunday Service</a></li>
-                <li><a href="#">Wildfire</a></li>
-                <li><a href="#">J12 Kids</a></li>
-                <li><a href="#">Spearhead</a></li>
-                <li><a href="#">Married for Life</a></li>
-                <li><a href="#">Mentoring</a></li>
-                <li><a href="#">SOL Class</a></li>
-                <li><a href="#">Life Class</a></li>
+              <li><a href="Announcement.html">General</a></li>
+              <li><a href="AnnouncementSundayService.html">Sunday Service</a></li>
+              <li><a href="AnnouncementWildfire.html">Wildfire</a></li>
+              <li><a href="AnnouncementJ12Kids.html">J12 Kids</a></li>
+              <li><a href="AnnouncementSpearhead.html">Spearhead</a></li>
+              <li><a href="AnnouncementMarriedforLife.html">Married for Life</a></li>
+              <li><a href="AnnouncementMentoring.html">Mentoring</a></li>
+              <li><a href="AnnouncementSOLClass.html">SOL Class</a></li>
+              <li><a href="AnnouncementLifeClass.html">Life Class</a></li>
         </ul>
         <div class="icon menu-btn">
           <img src="HeadnFooter/menu.png" alt="">
