--- a/AnnouncementJ12Kids.html
+++ b/AnnouncementJ12Kids.html
@@ -23,15 +23,15 @@
             <div class="icon cancel-btn">
                 <img src="HeadnFooter/menu.png" alt="">
             </div>
-              <li><a href="Announcement.html">General</a></li>
-              <li><a href="AnnouncementSundayService.html">Sunday Service</a></li>
-              <li><a href="AnnouncementWildfire.html">Wildfire</a></li>
-              <li><a href="AnnouncementJ12Kids.html">J12 Kids</a></li>
-              <li><a href="AnnouncementSpearhead.html">Spearhead</a></li>
-              <li><a href="AnnouncementMarriedforLife.html">Married for Life</a></li>
-              <li><a href="AnnouncementMentoring.html">Mentoring</a></li>
-              <li><a href="AnnouncementSOLClass.html">SOL Class</a></li>
-              <li><a href="AnnouncementLifeClass.html">Life Class</a></li>
+                <li><a href="Announcement.html">General</a></li>
+                <li><a href="AnnouncementSundayService.html">Sunday Service</a></li>
+                <li><a href="AnnouncementWildfire.html">Wildfire</a></li>
+                <li><a href="AnnouncementJ12Kids.html">J12 Kids</a></li>
+                <li><a href="AnnouncementSpearhead.html">Spearhead</a></li>
+                <li><a href="AnnouncementMarriedforLife.html">Married for Life</a></li>
+                <li><a href="AnnouncementMentoring.html">Mentoring</a></li>
+                <li><a href="AnnouncementSOLClass.html">SOL Class</a></li>
+                <li><a href="AnnouncementLifeClass.html">Life Class</a></li>
         </ul>
         <div class="icon menu-btn">
           <img src="HeadnFooter/menu.png" alt="">
@@ -45,44 +45,42 @@
     <div class="announce"></div>
 
     <div class="news1">
-      <img src="AnnounceIMGs/Sunday School (1).jpg" alt="">
+      <img src="AnnounceIMGs/kids.jpg" alt="">
       <div class="textBox">
         <div class="plateName">
-          <h2><span class="sundayService">SundayService</span></h2>
+          <h2><span class="j12Kids">J12 Kids</span></h2>
         </div>
-        <h1>Sunday Service</h1>
-        <p>We are thrilled to invite you to our upcoming Sunday Service, a spiritual celebration filled with love, joy, and unity! We warmly welcome each and every one of you to join us on a remarkable journey of faith and fellowship.</p>
+        <h1>J12 Kids</h1>
+        <p>You're invited to Wildfire!, Join us for an inspiring and empowering Young Person's Ministry!</p>
         <br>
-        <p>📅 Date: Every Sunday</p>
-        <p>⏰ Time: 9 AM</p>
-        <p>🏠 Location: 002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines and via LiveStream</p>
-        <p>For those who are unable to attend in person, fear not! We are delighted to offer Live Streaming Services, enabling you to participate in the Sunday Service from the comfort of your homes. Simply tune in to our live stream through our FB Page and Website, and you will be connected with the spiritual atmosphere of our congregation, no matter the distance.</p>
+        <p>📅 Date: Every Friday</p>
+        <p>⏰ Time: 6 PM</p>
+        <p>🏠 Location: 002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
         <br>
-        <p>🔗 Live Streaming Link: <a href="http://127.0.0.1:5501/Sundayservice.html#sermons"><span id="link">Sunday Service</span></a></p>
       </div>
     </div>
 
     <div class="bottomNews">
 
       <div class="news2">
-        <img src="AnnounceIMGs/sundayservice1.jpg" alt="">
+        <img src="AnnounceIMGs/Wildfire1.jpg" alt="">
         <div class="textBox">
           <div class="plateName">
-            <h2><span class="sundayService">Sunday Service</span></h2>
+            <h2><span class="j12Kids">J12 Kids</span></h2>
           </div>
-          <h1>"Divinely Sculpted: Fulfilling God's Purpose with Unyielding Grace"</h1>
-          <p>Just as God does not allow Joseph to abandon Mary because she conceived Jesus, He will not allow you to stay broken because you are following Him. Wait on the Lord, for even if we cannot see it, He is working for our good. So we must wait and believe.</p>
+          <h1>"Chosen, Created, Called: A Purpose Driven Profession"</h1>
+          <p>The young leaders/professionals of our church have instilled the Word of God in the recently graduated students of Colegio de Amore, uniting them in a gathering that highlights the significance of purpose in our lives, emphasizing how it brings meaning and fulfillment. For when God created us, He chose and called us according to His purpose. Our purpose can only be unveiled by the One who created us. And once we discover this God-given purpose, it will guide us to a truly fulfillling life.</p>
         </div>
       </div>
 
       <div class="news3">
-        <img src="AnnounceIMGs/sundayservice2.jpg" alt="">
+        <img src="AnnounceIMGs/WildfireSpear.jpg" alt="">
         <div class="textBox">
           <div class="plateName">
-            <h2><span class="sundayService">Sunday Service</span></h2>
+            <h2><span class="j12Kids">J12 Kids</span><span class="spearhead">Spearhead</span></h2>
           </div>
-        <h1>"Embracing the Burden: Navigating Forward with a Broken Heart"</h1>
-        <p>Healing starts when we stop to bleed. And the cure for a bleeding heart is forgiveness. Your past may have hurt you deeply, but it should not continue to do so. Decide not to bring all of your grudges against people and situations into this year.</p>
+          <h1>"Boundaries Youth Camp"</h1>
+          <p>The young leaders/professionals of our church have instilled the Word of God in the recently graduated students of Colegio de Amore, uniting them in a gathering that highlights the significance of purpose in our lives, emphasizing how it brings meaning and fulfillment. For when God created us, He chose and called us according to His purpose. Our purpose can only be unveiled by the One who created us. And once we discover this God-given purpose, it will guide us to a truly fulfillling life.</p>
         </div>
       </div>
 
@@ -90,25 +88,25 @@
 
     <div class="bottomNews">
 
-      <div class="news2">
-        <img src="AnnounceIMGs/sundayservice3.jpg" alt="">
-        <div class="textBox">
-          <div class="plateName">
-            <span class="sundayService">Sunday Service</span>
-          </div>
-          <h1>"Transformation through Ownership: The Power of Claiming"</h1>
-          <p>Let us recognize that God is advancing us in maturity with each prayer that we ask. If we want to add something to our lives, God usually requires us to let go of some of our characteristics or habits that will not help us mature. If we want to be promoted, we must stop murmuring. If we want our relationship to be restored, we must let go of our pride. We must let go of our selfishness in order to serve others.</p>
-        </div>
+       <div class="news2">
+            <img src="AnnounceIMGs/WildfireSpear1.jpg" alt="">
+            <div class="textBox">
+              <div class="plateName">
+                <h2><span class="j12Kids">J12 Kids</span><span class="spearhead">Spearhead</span></h2>
+              </div>
+            <h1>Great Light Youth</h1>
+            <p>The boundaries established by God's Word are provided as our direction and protection in life, not to stifle what we find enjoyable. For He is more concerned with our eternity in heaven than with the pleasures this life on earth might provide. To learn more of God's boundaries in our life, come to our Great Light Youth Service at 7PM in Amore Gym. See you there!</p>
+            </div>
       </div>
 
       <div class="news3">
-        <img src="AnnounceIMGs/sundayservice4.jpg" alt="">
+        <img src="AnnounceIMGs/Wildfire2.jpg" alt="">
         <div class="textBox">
           <div class="plateName">
-            <h2><span class="sundayService">Sunday Service</span></h2>
+            <h2><span class="j12Kids">J12 Kids</span></h2>
           </div>
-        <h1>Online Christmas Service</h1>
-        <p>Come and let us invite our family and friends to our Online Christmas Service this Sunday, at 9 am. The best gift that we can give to them is the opportunity to know our Lord and Savior, Jesus Christ.</p>
+        <h1>Your Life, Your Testimony</h1>
+        <p>Things that happen to us, both good and bad, have significance. They could serve God's purposes greater glory. Your experiences will not only strengthen your character and your relationship with God, but the Lord will also use them to benefit others. This Friday, join us and find out more about - Your life is your testimony</p>
         </div>
       </div>
     
