--- a/Wildfire.html
+++ b/Wildfire.html
@@ -26,7 +26,7 @@
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#blogs">Blogs</a></li>
                 <li><a href="#subscribe">Subscribe</a></li>
-                <li><a href="Announcement.html">Announcements</a></li>
+                <li><a href="AnnouncementWildfire.html">Announcements</a></li>
         </ul>
         <div class="icon menu-btn">
           <img src="HeadnFooter/menu.png" alt="">
