--- a/AnnouncementJ12Kids.html
+++ b/AnnouncementJ12Kids.html
@@ -45,7 +45,7 @@
     <div class="announce"></div>
 
     <div class="news1">
-      <img src="AnnounceIMGs/kids.jpg" alt="">
+      <img src="AnnounceIMGs/J12Kids.png" alt="">
       <div class="textBox">
         <div class="plateName">
           <h2><span class="j12Kids">J12 Kids</span></h2>
@@ -53,9 +53,9 @@
         <h1>J12 Kids</h1>
         <p>You're invited to Wildfire!, Join us for an inspiring and empowering Young Person's Ministry!</p>
         <br>
-        <p>📅 Date: Every Friday</p>
-        <p>⏰ Time: 6 PM</p>
-        <p>🏠 Location: 002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
+        <p>📅 Date: Every Sunday</p>
+        <p>⏰ Time: 9 AM</p>
+        <p>🏠 Location: TMC Amore Gym, 002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
         <br>
       </div>
     </div>
@@ -63,24 +63,30 @@
     <div class="bottomNews">
 
       <div class="news2">
-        <img src="AnnounceIMGs/Wildfire1.jpg" alt="">
+        <img src="AnnounceIMGs/J12Kids1.jpg" alt="">
         <div class="textBox">
           <div class="plateName">
             <h2><span class="j12Kids">J12 Kids</span></h2>
           </div>
-          <h1>"Chosen, Created, Called: A Purpose Driven Profession"</h1>
-          <p>The young leaders/professionals of our church have instilled the Word of God in the recently graduated students of Colegio de Amore, uniting them in a gathering that highlights the significance of purpose in our lives, emphasizing how it brings meaning and fulfillment. For when God created us, He chose and called us according to His purpose. Our purpose can only be unveiled by the One who created us. And once we discover this God-given purpose, it will guide us to a truly fulfillling life.</p>
+          <h1>Sunday School!</h1>
+          <p>What's up, mga bata? 👋<br>
+
+            Weekends nanaman at iisa lang ang ibig-sabihin niyan: may Sunday School na ulit sa Linggo!
+            
+            This February 19, another set of exciting games and amazing Bible stories await the J12 kids! Don't forget to invite your friends to come too.
+            <br>
+            Altogether, let's discover more about Jesus.</p>
         </div>
       </div>
 
       <div class="news3">
-        <img src="AnnounceIMGs/WildfireSpear.jpg" alt="">
+        <img src="AnnounceIMGs/J12Kids2.jpg" alt="">
         <div class="textBox">
           <div class="plateName">
-            <h2><span class="j12Kids">J12 Kids</span><span class="spearhead">Spearhead</span></h2>
+            <h2><span class="j12Kids">J12 Kids</span></h2>
           </div>
-          <h1>"Boundaries Youth Camp"</h1>
-          <p>The young leaders/professionals of our church have instilled the Word of God in the recently graduated students of Colegio de Amore, uniting them in a gathering that highlights the significance of purpose in our lives, emphasizing how it brings meaning and fulfillment. For when God created us, He chose and called us according to His purpose. Our purpose can only be unveiled by the One who created us. And once we discover this God-given purpose, it will guide us to a truly fulfillling life.</p>
+          <h1>Let's learn more about Jesus!</h1>
+          <p>Kumusta, mga bata? 👋 <br> Sa darating na Linggo, February 5, ay muli tayong magkita-kita sa Amore Gymnasium upang matuto ng panibagong aral tungkol kay Jesus! Inaanyayahan namin kayo na sa ganap na 9:00 ng umaga ay mag-enjoy ulit tayo sa mga palaro at mga kwento mula sa Bibliya kasama ng ating J12 teachers. Maari ninyo ring imbitahan ang inyong mga kapatid, pinsan, kaklase, at kaibigan na makisaya!</p>
         </div>
       </div>
 
@@ -89,24 +95,30 @@
     <div class="bottomNews">
 
        <div class="news2">
-            <img src="AnnounceIMGs/WildfireSpear1.jpg" alt="">
+            <img src="AnnounceIMGs/J12Kids3.jpg" alt="">
             <div class="textBox">
               <div class="plateName">
-                <h2><span class="j12Kids">J12 Kids</span><span class="spearhead">Spearhead</span></h2>
+                <h2><span class="j12Kids">J12 Kids</span></h2>
               </div>
-            <h1>Great Light Youth</h1>
-            <p>The boundaries established by God's Word are provided as our direction and protection in life, not to stifle what we find enjoyable. For He is more concerned with our eternity in heaven than with the pleasures this life on earth might provide. To learn more of God's boundaries in our life, come to our Great Light Youth Service at 7PM in Amore Gym. See you there!</p>
+            <h1>See you at Sunday Kids!</h1>
+            <p>Every day is for Jesus, but Sundays are extra special because we get to attend church and learn more about Him while having fellowship with our brothers and sisters.
+                <br>
+                That's why we are inviting the children to our Sunday School on February 12 at 9 a.m. in Amore Gymnasium. Don't forget to come with your friends and prepare for another fun-filled learning session with your J12 teachers.</p>
             </div>
       </div>
 
       <div class="news3">
-        <img src="AnnounceIMGs/Wildfire2.jpg" alt="">
+        <img src="AnnounceIMGs/J12Kids4.jpg" alt="">
         <div class="textBox">
           <div class="plateName">
             <h2><span class="j12Kids">J12 Kids</span></h2>
           </div>
-        <h1>Your Life, Your Testimony</h1>
-        <p>Things that happen to us, both good and bad, have significance. They could serve God's purposes greater glory. Your experiences will not only strengthen your character and your relationship with God, but the Lord will also use them to benefit others. This Friday, join us and find out more about - Your life is your testimony</p>
+        <h1>Welcome to Sunday School!</h1>
+        <p>What's up, J12 kids? 👋
+            <br>
+            We all know who Jesus is in our lives as God's children, right? The Bible teaches us that He is our Lord and Savior. Did you know that we can share Jesus with our friends and loved ones so they can know him too? Yes, you read that right, kids!
+            <br>
+            That is why we are welcoming the children to our J12 Kids Sunday School, which will be held this Sunday at 9:00 a.m. in Amore Gymnasium. Kids, don't forget to invite your friends so that we may all learn about Jesus while having fun.</p>
         </div>
       </div>
     
