--- a/AnnouncementSundayService.html
+++ b/AnnouncementSundayService.html
@@ -45,7 +45,7 @@
     <div class="announce"></div>
 
     <div class="news1">
-      <img src="AnnounceIMGs/Sunday School (1).jpg" alt="">
+      <img src="AnnounceIMGs/Sunday Service.png" alt="">
       <div class="textBox">
         <div class="plateName">
           <h2><span class="sundayService">SundayService</span></h2>
@@ -63,8 +63,8 @@
     </div>
 
     <div class="bottomNews">
-
-      <div class="news2">
+      <!-- ---------- -->
+      <div class="news2">     
         <img src="AnnounceIMGs/sundayservice1.jpg" alt="">
         <div class="textBox">
           <div class="plateName">
