--- a/AnnouncementWildfire.html
+++ b/AnnouncementWildfire.html
@@ -45,7 +45,7 @@
     <div class="announce"></div>
 
     <div class="news1">
-      <img src="AnnounceIMGs/Wildfire.jpg" alt="">
+      <img src="AnnounceIMGs/WildfireBG.png" alt="">
       <div class="textBox">
         <div class="plateName">
           <span class="wildfire">Wildfire</span>
