--- a/LifeClass.html
+++ b/LifeClass.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="intro">
-        <h1>LifeClass</h1>
+        <h1>Lifeclass</h1>
         <p>"Jesus said to her, 'I am the resurrection and the life. The one who believes in me will live, even though they die; and whoever lives by believing in me will never die. Do you believe this?'"</p>
         <p id="verse">John 11:25-26</p>
       </div>
