--- a/LifeClass.html
+++ b/LifeClass.html
@@ -65,7 +65,7 @@
 
     <div class="containerForm">
       <p>If you are interested you can fill up this form so we can assisst you further in order to join Lifeclass</p>
-      <button>Click here</button>
+      <a href="LifeClassForm.html"><button>Click here</button></a>
     </div>
 
     <div class="bottomLinks">
