--- a/MentoringForm.html
+++ b/MentoringForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Mentoring.css">
+    <link rel="stylesheet" href="MenSOLLife.css">
     <link rel="stylesheet" href="MentoringNavbar.css">
     <script defer src="equipping.js"></script>
     <title>Mentoring</title>
@@ -35,57 +35,23 @@
     </nav>
 </section>
 
-    <div class="bgweb">
-  
-        <div class="plateName">
-          <h2>Equipping</h2>
-        </div>
-  
-        <div class="intro">
-          <h1>Mentoring</h1>
-          <p>Be shepherds of God's flock that is under your care, watching over them—not because you must, but because you are willing, as God wants you to be; not pursuing dishonest gain, but eager to serve; not lording it over those entrusted to you, but being examples to the flock.</p>
-          <p id="verse">1 Peter 5:2-3</p>
-        </div>
-      </div>
-    
-
-    <div class="container1">
-        <div class="subContainer1">
-            <img src="MentoringIMGs/mentor2.png" alt="">
-        </div>
-        <div class="subContainer2">
-            <h1>Learn to live a life as a Christian</h1>
-            <p>Being a Christian is often not easy and full of persecution. Frequently I hear the question, “Why is it so hard to be a Christian?”. Other people find it very easy to be a Christian. I tell people that honestly, though it isn’t easy for people to accept if your life as a Christian is easy for you, you likely aren’t living as a Christian should. In here we will teach the important things a Christian must do in their life. </p>
-        </div>
-    </div>
-
-<div id="bgcolor">
-    <div class="container2">
-        <div class="subContainer3">
-            <h1>What is Soulwinning?</h1>
-            <p>Soul winning is preaching the word of God, giving someone an opportunity to give their lives to Christ and save them from going to hell. Through this, the person can become a child of God, enjoy His goodness and inheritance, even while on earth. This is one of many things that we will teach you as a Christian</p>
-        </div>
-        <div class="subContainer4">
-            <img src="MentoringIMGs/soulwinn.png" alt="">
-        </div>
-    </div>  
-</div>
-
-    <div class="container1">
-        <div class="subContainer1">
-            <img src="MentoringIMGs/friends.png" alt="">
-        </div>
-        <div class="subContainer2">
-            <h1>Learn to live a life as a Christian</h1>
-            <p>Being a Christian is often not easy and full of persecution. Frequently I hear the question, “Why is it so hard to be a Christian?”. Other people find it very easy to be a Christian. I tell people that honestly, though it isn’t easy for people to accept if your life as a Christian is easy for you, you likely aren’t living as a Christian should. In here we will teach the important things a Christian must do in their life. </p>
-        </div>
-    </div>
-
-    <div class="containerForm">
-      <p>If you are interested you can fill up this form so we can assisst you further in order to join Mentoring classes</p>
-      <a href="MentoringForm.html"><button>Click here</button></a>
-    </div>
-
+    <body>
+        <div class="textPrayer">
+            <h1>Mentoring Registration Form</h1>
+          </div>
+          
+          <div class="containers">
+            <form>
+                <label>Name (Optional) </label> <br>
+                <input type="name"> <br>
+                <label>Email </label> <br>
+                <input type="email"> <br>
+                <label>Contact Number </label> <br>
+                <input type="number"> <br>
+                <button>Submit</button>
+            </form>
+          </div>
+    </body>
 
     <div class="bottomLinks">
 
