--- a/AnnouncementSpearhead.html
+++ b/AnnouncementSpearhead.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
       <div class="content">
         <div class="logo">
-            <a href="index.html#connects">
+            <a href="index.html">
             <img src="HeadnFooter/logo.png" alt="">
             </a>
         </div>
