--- a/Archive1.html
+++ b/Archive1.html
@@ -21,7 +21,7 @@
           </div>
             <ul class="menu-list">
               <div class="icon cancel-btn">
-                <img src="HeadnFooter/menu.png" alt="">
+                <img src="HeadnFooter/closewindow.png" alt="">
               </div>
               <li><a href="Sundayservice.html">Home</a></li>
               <li><a href="Sundayservice.html#aboutus">About Us</a></li>
