--- a/J12Kids.html
+++ b/J12Kids.html
@@ -20,13 +20,12 @@
         </div>
         <ul class="menu-list">
             <div class="icon cancel-btn">
-                <img src="HeadnFooter/menu.png" alt="">
+                <img src="HeadnFooter/closewindow.png" alt="">
             </div>
                 <li><a href="index.html#connects">Home</a></li>
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#teachers">Teachers</a></li>
                 <li><a href="#blogs">Stories</a></li>
-                <li><a href="PrayerRequest.html">Prayer Request</a></li>
                 <li><a href="Announcement.html">Announcements</a></li>
         </ul>
         <div class="icon menu-btn">
