--- a/MLblog2.html
+++ b/MLblog2.html
@@ -16,7 +16,7 @@
             <div class="content">
                 <div class="logo">
                     <a href="index.html#connects">
-                    <img src="HeadnFooter/logo.png" alt="">
+                    <img src="HeadnFooter/closewindow.png" alt="">
                     </a>
                 </div>
                 <ul class="menu-list">
