--- a/SOL.html
+++ b/SOL.html
@@ -24,7 +24,7 @@
         </div>
         <ul class="menu-list">
             <div class="icon cancel-btn">
-                <img src="HeadnFooter/menu.png" alt="">
+                <img src="HeadnFooter/closewindow.png" alt="">
             </div>
                 <li><a href="Mentoring.html">Mentoring</a></li>
                 <li><a href="SOL.html">SOL CLass</a></li>
