--- a/Story1.html
+++ b/Story1.html
@@ -22,13 +22,12 @@
             </div>
             <ul class="menu-list">
                 <div class="icon cancel-btn">
-                    <img src="HeadnFooter/menu.png" alt="">
+                    <img src="HeadnFooter/closewindow.png" alt="">
                 </div>
                     <li><a href="J12Kids.html">Home</a></li>
                     <li><a href="J12Kids.html#aboutus">About Us</a></li>
                     <li><a href="J12Kids.html#eteachers">Teachers</a></li>
                     <li><a href="J12Kids.html#blogs">Stories</a></li>
-                    <li><a href="PrayerRequest.html">Prayer Request</a></li>
                     <li><a href="Announcement.html">Announcements</a></li>
             </ul>
             <div class="icon menu-btn">
