--- a/Story3.html
+++ b/Story3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="story3.css">
+    <link rel="stylesheet" href="story.css">
     <link rel="stylesheet" href="StoriesNavBar.css">
     <script src="j12kids.js" defer></script>
     <title>Daniel and the Lion</title>
@@ -21,13 +21,12 @@
         </div>
         <ul class="menu-list">
             <div class="icon cancel-btn">
-                <img src="HeadnFooter/menu.png" alt="">
+                <img src="HeadnFooter/closewindow.png" alt="">
             </div>
             <li><a href="J12Kids.html">Home</a></li>
             <li><a href="J12Kids.html#aboutus">About Us</a></li>
             <li><a href="J12Kids.html#eteachers">Teachers</a></li>
             <li><a href="J12Kids.html#blogs">Stories</a></li>
-            <li><a href="PrayerRequest.html">Prayer Request</a></li>
             <li><a href="Announcement.html">Announcements</a></li>
         </ul>
         <div class="icon menu-btn">
