--- a/AnnouncementJ12Kids.html
+++ b/AnnouncementJ12Kids.html
@@ -21,7 +21,7 @@
         </div>
         <ul class="menu-list">
             <div class="icon cancel-btn">
-                <img src="HeadnFooter/menu.png" alt="">
+                <img src="HeadnFooter/closewindow.png" alt="">
             </div>
                 <li><a href="Announcement.html">General</a></li>
                 <li><a href="AnnouncementSundayService.html">Sunday Service</a></li>
