--- a/Archive5.html
+++ b/Archive5.html
@@ -21,7 +21,7 @@
               </a>
           </div>
             <ul class="menu-list">
-              <div class="icon cancel-btn">
+              <div class="HeadnFooter/closewindow.png">
                 <img src="HeadnFooter/menu.png" alt="">
               </div>
               <li><a href="Sundayservice.html">Home</a></li>
