--- a/MLblog4.html
+++ b/MLblog4.html
@@ -21,7 +21,7 @@
                 </div>
                 <ul class="menu-list">
                     <div class="icon cancel-btn">
-                        <img src="HeadnFooter/menu.png" alt="">
+                        <img src="HeadnFooter/closewindow.png" alt="">
                     </div>
                         <li><a href="index.html#connects">Home</a></li>
                         <li><a href="Married4Life.html#aboutus">About Us</a></li>
