--- a/PrayerRequest.html
+++ b/PrayerRequest.html
@@ -18,7 +18,7 @@
           </div>
           <ul class="menu-list">
             <div class="icon cancel-btn">
-              <img src="HeadnFooter/menu.png" alt="">
+              <img src="HeadnFooter/closewindow.png" alt="">
             </div>
             <li><a href="index.html #home">Home</a></li>
             <li><a href="index.html#connects">Connects</a></li>
