--- a/Story5.html
+++ b/Story5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="story4.css">
+    <link rel="stylesheet" href="story.css">
     <link rel="stylesheet" href="StoriesNavBar.css">
     <script src="j12kids.js" defer></script>
     <title>Feeding of the 5000</title>
@@ -27,17 +27,16 @@
             <li><a href="J12Kids.html#aboutus">About Us</a></li>
             <li><a href="J12Kids.html#eteachers">Teachers</a></li>
             <li><a href="J12Kids.html#blogs">Stories</a></li>
-            <li><a href="PrayerRequest.html">Prayer Request</a></li>
             <li><a href="Announcement.html">Announcements</a></li>
         </ul>
         <div class="icon menu-btn">
-          <img src="HeadnFooter/menu.png" alt="">
+          <img src="HeadnFooter/closewindow.png" alt="">
         </div>
       </div>
     </nav>
   </section>
 
-<div class="banner1">
+<div class="banner">
     <h1>Jesus feeds 5000 men</h1>
     <p>Matthew 14:13 - 21; Mark 6: 31 - 44; Luke 9: 12 - 17; John 6: 1 - 14</p>
 </div>
@@ -51,7 +50,7 @@
             <p>Miraculously, the food multiplied, and there was enough for everyone to eat as much as they wanted. In fact, there were twelve baskets of leftovers, one for each of the twelve disciples.</p>
         </div>
         <div class="bruh">
-            <img src="J12KidsIMGs/creation.jpg" alt="">
+            <img src="J12KidsIMGs/jesusfeeds5000.jpeg" alt="">
         </div>
     </div>
     <p>The people were amazed by what they had witnessed. They recognized that this was a sign of God's power and that Jesus was a prophet sent from God. They wanted to make him their king and overthrow the Roman occupation, but Jesus withdrew from them and went up into the mountains to pray.</p>
