--- a/fireBlogs3.html
+++ b/fireBlogs3.html
@@ -20,7 +20,7 @@
             </div>
             <ul class="menu-list">
                 <div class="icon cancel-btn">
-                    <img src="HeadnFooter/menu.png" alt="">
+                    <img src="HeadnFooter/closewindow.png" alt="">
                 </div>
                 <li><a href="Wildfire.html">Home</a></li>
                 <li><a href="Wildfire.html#aboutus">About Us</a></li>
