--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
           <ul class="menu-list">
             <div class="icon cancel-btn">
-              <img src="HeadnFooter/menu.png" alt="">
+              <img src="HeadnFooter/closewindow.png" alt="">
             </div>
             <li><a href="#home">Home</a></li>
             <li><a href="#connects">Connects</a></li>
