--- a/Spearhead.html
+++ b/Spearhead.html
@@ -90,7 +90,57 @@
   </div>
 </section>
 
-<section id="blogss">
+<section id="blogs">
+  <div class="desc">
+      <h1>Spearhead Blogs</h1>
+      <p>This is a compilation of previous sermons and seminars that may help you as an Adult Proffesional that serving our God</p>
+  </div>  
+
+  <div class="blogs">
+      <div class="column">
+          <h1>Latest Blog</h1>
+          <div class="blog">
+              <a href="Blog1.html">
+              <div class="blogInfo">
+                  <h1>Companionship</h1>
+                  <p>Blog</p>
+              </div>
+              </a>
+          </div>
+      </div>
+      <div class="column2">
+          <h1>Past blogs</h1>
+          <div class="scroll">
+          <div class="blog">
+              <a href="Blog2.html">
+              <div class="blogInfo">
+                  <h1>Creating a Plan</h1>
+                  <p>Blog</p>   
+              </div>
+              </a>
+          </div>
+          <div class="blog2">
+              <a href="Blog3.html">
+              <div class="blogInfo">
+                  <h1>Life of Significance</h1>
+                  <p>Blog</p>
+              </div>
+              </a>
+          </div>
+          <div class="blog3">
+              <a href="MLblog4.html">
+              <div class="blogInfo">
+                  <h1>Maximixing your Time</h1>
+                  <p>Blog</p>
+              </div>
+              </a>
+          </div>
+        </div>
+      </div>
+  </div>
+</section>
+
+<!-- <section id="blogss">
   <div class="blogs">
     <h1>Blogs</h1>
     <p>This is a compilation of previous sermons and seminars that may help you as an Adult Proffesional that serving our God</p>
@@ -147,7 +197,7 @@
           <h1>Decision Making </h1>
         </div>
         </a>
-      </div>
+      </div> -->
 
     </div>
   </div>
