--- a/public/index.html
+++ b/public/index.html
@@ -313,7 +313,7 @@
         <div class="announcement">
           <h1>Announcement</h1>
           <p>Here you will find information about upcoming events, activities, and other news from our church community. We update this page regularly, so be sure to check back often for the latest updates.</p>
-          <button class="button"><span><h1>Be updated </h1></span></button>
+          <a href="Announcement.html"><button class="button"><span><h1>Be updated </h1></span></button></a>
         </div>
     
       </div>
