--- a/public/AnnouncementSpearhead.html
+++ b/public/AnnouncementSpearhead.html
@@ -68,7 +68,7 @@
             <img src="AnnounceIMGs/WildfireSpear.jpg" alt="">
             <div class="textBox">
                 <div class="plateName">
-                    <h2><span class="spearhead">Spearhead</span><span class="wildfire">Wildfire</span></h2>
+                    <h2><span class="spearhead">Spearhead</span></h2>
                 </div>
                 <h1>"Boundaries Youth Camp"</h1>
                 <p>The young leaders/professionals of our church have instilled the Word of God in the recently graduated students of Colegio de Amore, uniting them in a gathering that highlights the significance of purpose in our lives, emphasizing how it brings meaning and fulfillment. For when God created us, He chose and called us according to His purpose. Our purpose can only be unveiled by the One who created us. And once we discover this God-given purpose, it will guide us to a truly fulfillling life.</p>
@@ -79,7 +79,7 @@
             <img src="AnnounceIMGs/WildfireSpear1.jpg" alt="">
             <div class="textBox">
               <div class="plateName">
-                <h2><span class="wildfire">Wildfire</span><span class="spearhead">Spearhead</span></h2>
+                <h2><span class="wildfire">Wildfire</span></h2>
               </div>
             <h1>Great Light Youth</h1>
             <p>The boundaries established by God's Word are provided as our direction and protection in life, not to stifle what we find enjoyable. For He is more concerned with our eternity in heaven than with the pleasures this life on earth might provide. To learn more of God's boundaries in our life, come to our Great Light Youth Service at 7PM in Amore Gym. See you there!</p>
