--- a/public/fireBlogs1.html
+++ b/public/fireBlogs1.html
@@ -172,6 +172,10 @@
         imageSetter.src = himage;
         bodySetter.innerHTML += hbody;
 
+        //clear storage
+        localStorage.removeItem('tempData');
+        localStorage.clear();
+
         const body = document.querySelector("body");
     const navbar = document.querySelector(".navbar");
     const menuBtn = document.querySelector(".menu-btn");
